# perlica-rs

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  changelog.md  docker-compose.yml  docker-entrypoint.sh  docker-publish.yml  rust-toolchain.toml
.github/workflows/: rust.yml
assets/tables/: FactoryConst.json  FactorySTTree.json  FactoryTable.json  RewardTable.json
lib/config/src/: factory_const.rs  factory_map.rs  factory_recycler_const.rs  factory_skill_const.rs  item.rs  level_data.rs  lib.rs  mission.rs  reward.rs  weapon.rs
lib/config/src/tables/: factory_const.rs  factory_map.rs  factory_recycler_const.rs  factory_skill_const.rs  level_data.rs  mod.rs
lib/db/: Cargo.toml
lib/db/migrations/: 0001_initial_schema.sql  0002_wallet.sql
lib/db/src/: error.rs  lib.rs  persistable.rs  saves.rs
lib/db/src/subsystems/: bitsets.rs  char_bag.rs  guides.rs  mail.rs  missions.rs  mod.rs  player_root.rs  prune.rs  scene.rs  wallet.rs
lib/logic/src/: bitset.rs  entity.rs  enums.rs  error.rs  interest.rs  item.rs  level_script.rs  lib.rs  mail.rs  mission.rs  movement.rs  player.rs  scene.rs  spatial.rs  wallet.rs
lib/logic/src/character/: char_bag.rs  mod.rs  progression.rs  skill.rs
lib/logic/src/traits/: classify.rs  id.rs  item.rs  lifecycle.rs  mod.rs  pending.rs  player.rs  proto.rs  sync.rs  util.rs
servers/config-server/src/: main.rs
servers/game-server/src/: main.rs  sconfig.rs
servers/game-server/src/handlers/: bitset.rs  char_bag.rs  equip.rs  factory.rs  gm.rs  login.rs  (+5 more)
servers/muip-server/res/: index.html
(+27 files in other folders)
