[workspace]
members = ["lib/*", "servers/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.0"

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
byteorder = "1.5"
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
toml = "0.8"

common = { path = "lib/common" }
config = { path = "lib/config" }
perlica-proto = { path = "lib/proto" }
perlica-logic = { path = "lib/logic" }
perlica-db = { path = "lib/db" }
perlica-muip = { path = "lib/muip" }


[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
