[package]
name = "perlica-db"
edition.workspace = true
version.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
perlica-logic.workspace = true
perlica-proto.workspace = true
common.workspace = true
config.workspace = true
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
